welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: value update is not a member of String
if(litMessage()=A)
   ^